--- a/app/src/main/res/drawable/radius_10_hollow.xml
+++ b/app/src/main/res/drawable/radius_10_hollow.xml
@@ -2,10 +2,10 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="10dp" />
-    <solid android:color="#FFE8F0"/>
+    <solid android:color="#FAFAFA"/>
     <padding
         android:bottom="4dp"
-        android:left="4dp"
+        android:left="10dp"
         android:right="4dp"
         android:top="4dp" />
 </shape>
