--- a/app/src/main/res/layout/bottom_dialog_song.xml
+++ b/app/src/main/res/layout/bottom_dialog_song.xml
@@ -17,6 +17,7 @@
             android:id="@+id/tv_songName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            style="@style/text_oneLine_18"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -25,21 +26,22 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
+            style="@style/text_oneLine_16"
             app:layout_constraintStart_toStartOf="@+id/tv_songName"
             app:layout_constraintTop_toBottomOf="@+id/tv_songName" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_itemList"
             android:layout_width="match_parent"
-            android:layout_height="100dp"
+            android:layout_height="130dp"
             android:layout_marginTop="16dp"
-            android:clipToPadding="true"
+            android:paddingVertical="10dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_singerName"
             app:layout_constraintVertical_bias="0.0"
-            tools:listitem="@layout/list_item_work1"
+            tools:listitem="@layout/item_text_image"
             tools:itemCount="4"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
