--- a/app/src/main/res/layout/custom_song_list_fragment.xml
+++ b/app/src/main/res/layout/custom_song_list_fragment.xml
@@ -50,19 +50,19 @@
                     android:fitsSystemWindows="true"
                     app:layout_collapseMode="parallax">
 
-                    <ImageView
-                        android:id="@+id/imageView6"
-                        urlAlbum2="@{songListBean.coverImage}"
-                        android:layout_width="150dp"
-                        android:layout_height="150dp"
+                    <com.coorchice.library.SuperTextView
+                        android:id="@+id/albumView"
+                        android:layout_width="120dp"
+                        android:layout_height="120dp"
                         android:layout_marginStart="16dp"
-                        android:layout_marginTop="60dp"
-                        android:scaleType="fitXY"
+                        android:layout_marginBottom="16dp"
+                        android:elevation="5dp"
+                        android:gravity="center"
+                        android:outlineProvider="bounds"
+                        android:textSize="50sp"
+                        android:textStyle="bold"
                         app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintVertical_bias="0.35000002"
-                        tools:src="@tools:sample/avatars" />
+                        app:layout_constraintStart_toStartOf="parent" />
 
                     <TextView
                         android:id="@+id/textView10"
@@ -73,20 +73,33 @@
                         android:layout_marginEnd="8dp"
                         android:text="@{songListBean.name}"
                         android:textSize="20sp"
-                        app:layout_constraintBottom_toBottomOf="@+id/imageView6"
+                        app:layout_constraintBottom_toBottomOf="@+id/albumView"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="0.0"
-                        app:layout_constraintStart_toEndOf="@+id/imageView6"
-                        app:layout_constraintTop_toTopOf="@+id/imageView6"
+                        app:layout_constraintStart_toEndOf="@+id/albumView"
+                        app:layout_constraintTop_toTopOf="@+id/albumView"
                         app:layout_constraintVertical_bias="0.100000024"
                         tools:text="歌单名字" />
+
+                    <TextView
+                        android:id="@+id/textView5"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:text="@{songListBean.date}"
+                        style="@style/text_oneLine"
+                        app:layout_constraintBottom_toBottomOf="@+id/albumView"
+                        app:layout_constraintEnd_toEndOf="@+id/textView10"
+                        app:layout_constraintStart_toStartOf="@+id/textView10"
+                        app:layout_constraintTop_toBottomOf="@+id/textView10"
+                        app:layout_constraintVertical_bias="0.3"
+                        tools:text="创建日期"/>
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
                 <com.google.android.material.appbar.MaterialToolbar
                     android:id="@+id/toolbar"
                     android:layout_width="match_parent"
                     android:layout_height="?attr/actionBarSize"
-                    android:background="@android:color/transparent"
+                    android:background="#FF9090"
                     app:contentInsetStartWithNavigation="0dp"
                     app:layout_collapseMode="pin"
                     app:menu="@menu/menu_songlist"
