--- a/app/src/main/res/layout/list_item_douban_minor.xml
+++ b/app/src/main/res/layout/list_item_douban_minor.xml
@@ -5,8 +5,8 @@
 
     <data>
         <variable
-            name="doubanMinorVM"
-            type="com.example.echo_kt.ui.douban.bean.DoubanBean.DoubanMinorBean" />
+            name="videoMinorVM"
+            type="com.example.echo_kt.ui.video.bean.VideoBean.VideoMinorBean" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -26,7 +26,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:srcCompat="@tools:sample/avatars"
-            url="@{doubanMinorVM.imgPath}"
+            url="@{videoMinorVM.imgPath}"
             android:scaleType="fitXY"
             android:contentDescription="TODO" />
 
@@ -35,7 +35,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:text="@{doubanMinorVM.title}"
+            android:text="@{videoMinorVM.title}"
             android:textStyle="bold"
             style="@style/text_oneLine"
             app:layout_constraintEnd_toEndOf="@+id/imageView2"
