--- a/app/src/main/res/layout/list_item_songlist.xml
+++ b/app/src/main/res/layout/list_item_songlist.xml
@@ -13,21 +13,21 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingVertical="5dp"
-        android:elevation="10dp"
-        android:layout_margin="5dp"
+        android:elevation="3dp"
+        android:layout_margin="4dp"
         android:background="@drawable/radius_10_hollow"
-        android:paddingHorizontal="10dp">
+        android:paddingHorizontal="5dp">
 
-        <ImageView
-            android:id="@+id/imageView5"
+        <com.coorchice.library.SuperTextView
+            android:id="@+id/albumView"
             android:layout_width="70dp"
             android:layout_height="70dp"
-            urlAlbum2="@{bean.coverImage}"
-            android:scaleType="fitXY"
+            android:gravity="center"
+            android:textSize="40sp"
+            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:srcCompat="@tools:sample/avatars" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/textView7"
@@ -40,8 +40,8 @@
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toEndOf="@+id/imageView5"
-            app:layout_constraintTop_toTopOf="@+id/imageView5"
+            app:layout_constraintStart_toEndOf="@+id/albumView"
+            app:layout_constraintTop_toTopOf="@+id/albumView"
             tools:text="收藏" />
 
         <TextView
