--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -41,9 +41,9 @@
             android:id="@+id/playView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:background="@drawable/radius_10_hollow"
-            android:padding="5dp"
+            android:layout_margin="4dp"
+            android:background="@drawable/radius_16_theme"
+            android:elevation="2dp"
             app:layout_constraintBottom_toTopOf="@+id/nav_view"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
