--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -9,12 +9,10 @@
 
     <item
         android:id="@+id/menu_video"
-        android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="@string/title_video"/>
-
-    <item
-        android:id="@+id/menu_my"
         android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="@string/title_my" />
-
+        android:title="@string/title_video"/>
+    <item
+        android:id="@+id/menu_info"
+        android:icon="@drawable/ic_dashboard_black_24dp"
+        android:title="@string/title_info"/>
 </menu>
