新增paging库用来获取不同来源的音乐列表并实现其分页功能，并且配合hilt实现了依赖项注入，新增了启动页，微调了UI，将gradle版本升至7.0.1，Java版本升至11

--- a/app/src/main/res/layout/list_item_songlist.xml
+++ b/app/src/main/res/layout/list_item_songlist.xml
@@ -36,23 +36,24 @@
             android:layout_marginStart="20dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="32dp"
-            android:text="@{bean.name}"
+            android:text='@{bean.name}'
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@+id/albumView"
             app:layout_constraintTop_toTopOf="@+id/albumView"
-            tools:text="收藏" />
+            tools:text="**********" />
 
         <TextView
             android:id="@+id/textView8"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
-            android:text='@{bean.number+"首"}'
+            android:text='@{"共"+bean.number+"首"}'
             app:layout_constraintEnd_toEndOf="@+id/textView7"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/textView7"
-            app:layout_constraintTop_toBottomOf="@+id/textView7" />
+            app:layout_constraintTop_toBottomOf="@+id/textView7"
+            tools:text="******"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
