--- a/app/src/main/res/drawable/radius_10_hollow.xml
+++ b/app/src/main/res/drawable/radius_10_hollow.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="10dp" />
-    <solid android:color="#FAFAFA"/>
+    <solid android:color="@color/white"/>
     <padding
         android:bottom="4dp"
         android:left="10dp"
