--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -45,6 +45,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="32dp"
                 android:background="@drawable/radius_10_hollow"
+                android:elevation="4dp"
                 android:layout_marginLeft="70dp"
                 android:layout_marginRight="70dp"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -60,7 +61,8 @@
                     android:scaleType="center"
                     android:src="@mipmap/search"
                     app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:contentDescription="@string/search" />
 
                 <TextView
                     android:id="@+id/etSearch"
@@ -83,14 +85,15 @@
                 android:src="@mipmap/setting"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                android:contentDescription="@string/setting" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvHome"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingStart="20dp"
+            android:paddingStart="5dp"
             android:paddingEnd="0dp"
             app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
             app:layout_constraintEnd_toEndOf="parent"
@@ -128,7 +131,8 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@mipmap/add" />
+                app:srcCompat="@mipmap/add"
+                android:contentDescription="@string/addSonglist" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.recyclerview.widget.RecyclerView
