--- a/app/src/main/res/layout/list_item_search.xml
+++ b/app/src/main/res/layout/list_item_search.xml
@@ -12,7 +12,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:elevation="2dp"
+        android:elevation="4dp"
         android:layout_margin="4dp"
         android:background="@drawable/radius_10_hollow">
 
@@ -53,6 +53,7 @@
             android:foreground="?android:attr/selectableItemBackgroundBorderless"
             app:layout_constraintBottom_toBottomOf="@+id/ll_play"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/ll_play" />
+            app:layout_constraintTop_toTopOf="@+id/ll_play"
+            android:contentDescription="@string/other" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
