--- a/app/src/main/res/layout/setting_fragment.xml
+++ b/app/src/main/res/layout/setting_fragment.xml
@@ -36,13 +36,13 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                android:contentDescription="TODO" />
+                android:contentDescription="@string/setting" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
-                android:text="设置"
+                android:text="@string/setting"
                 android:textSize="24sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -51,15 +51,14 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <Switch
+        <com.google.android.material.switchmaterial.SwitchMaterial
             android:id="@+id/switchTimeOff"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:checked="@{vmHome.countdownBean.countdownState}"
             style="@style/text_oneLine_16"
-            android:text="定时关闭"
+            android:text="@string/timingClosure"
             android:background="@drawable/radius_10_hollow"
-            android:backgroundTint="@color/sunflower_gray_50_a600"
             android:gravity="center_vertical"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -75,7 +74,7 @@
             app:layout_constraintStart_toStartOf="@+id/switchTimeOff"
             app:layout_constraintTop_toBottomOf="@+id/switchTimeOff">
 
-            <SeekBar
+            <androidx.appcompat.widget.AppCompatSeekBar
                 android:id="@+id/seekBarOff"
                 android:layout_width="240dp"
                 android:layout_height="wrap_content"
@@ -92,7 +91,7 @@
                 android:id="@+id/textView3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="倒计时"
+                android:text="@string/countDown"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -119,9 +118,8 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="50dp"
             android:background="@drawable/radius_10_hollow"
-            android:backgroundTint="@color/sunflower_gray_50_a600"
             android:gravity="center_vertical"
-            android:text="更新所有音频地址"
+            android:text="@string/updatePath"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -146,7 +144,8 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/btn_update"
             app:layout_constraintTop_toTopOf="@+id/btn_update"
-            app:srcCompat="@mipmap/ok" />
+            app:srcCompat="@mipmap/ok"
+            android:contentDescription="@string/updateComplete" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
