--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,17 +5,8 @@
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
-
-    <color name="sunflower_black">#de000000</color>
-    <color name="sunflower_gray_50">#fafafa</color>
-    <color name="sunflower_gray_50_a600">#99fafafa</color>
-    <color name="sunflower_green_300">#6dc790</color>
-    <color name="sunflower_green_500">#49bb79</color>
-    <color name="sunflower_green_700">#005d2b</color>
-    <color name="sunflower_green_900">#1a231e</color>
-    <color name="sunflower_white">#deffffff</color>
-    <color name="sunflower_yellow_300">#f8f99f</color>
-    <color name="sunflower_yellow_500">#ffff63</color>
+    <color name="black">#000000</color>
+    <color name="white">#FFFFFF</color>
+    <color name="primary">#FFFFFF</color>
+    <color name="Secondary">#39A7BB</color>
 </resources>
