--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,42 +1,22 @@
-<!--
-  ~ Copyright 2018 Google LLC
-  ~
-  ~ Licensed under the Apache License, Version 2.0 (the "License");
-  ~ you may not use this file except in compliance with the License.
-  ~ You may obtain a copy of the License at
-  ~
-  ~     https://www.apache.org/licenses/LICENSE-2.0
-  ~
-  ~ Unless required by applicable law or agreed to in writing, software
-  ~ distributed under the License is distributed on an "AS IS" BASIS,
-  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-  ~ See the License for the specific language governing permissions and
-  ~ limitations under the License.
-  -->
-
 <resources>
 
+    <style name="SplashTheme" parent="Theme.SplashScreen">
+        <item name="windowSplashScreenBackground">#FFFFFF</item>
+        <item name="windowSplashScreenAnimatedIcon">@mipmap/logo</item>
+        <item name="postSplashScreenTheme">@style/Base.Theme.Echo</item>
+    </style>
     <!-- To see how these attributes are used, please visit https://material.io/develop/android/theming/color/ -->
-    <style name="Base.Theme.Sunflower" parent="Theme.MaterialComponents.DayNight.NoActionBar">
-        <item name="colorPrimary">#A6A6A6</item>
+    <style name="Base.Theme.Echo" parent="Theme.MaterialComponents.Light.NoActionBar">
+        <item name="colorPrimary">#F2F3F7</item>
+        <item name="colorSecondary">#39A7BB</item>
         <item name="colorOnPrimary">@color/black</item>
-        <item name="colorPrimaryDark">#FF5858</item>
-        <item name="colorOnSurface">@color/sunflower_black</item>
-        <item name="colorAccent">@color/sunflower_green_500</item>
+        <item name="colorPrimaryDark">@color/white</item>
+        <item name="colorOnSurface">@color/black</item>
+        <item name="colorAccent">@color/Secondary</item>
         <item name="colorSurface">#FCFCFC</item>
-        <item name="colorSecondary">@color/sunflower_yellow_300</item>
         <!--   背景色     -->
-        <item name="android:colorBackground">#F3F3F3</item>
+        <item name="android:colorBackground">@color/white</item>
     </style>
-
-    <style name="Theme.Sunflower" parent="Base.Theme.Sunflower"/>
-
-    <style name="Theme.Sunflower.NoActionBar">
-        <item name="windowActionBar">false</item>
-        <item name="windowNoTitle">true</item>
-    </style>
-
-    <style name="Theme.Sunflower.AppBarOverlay" parent="ThemeOverlay.MaterialComponents.Dark.ActionBar"/>
 
     <style name="TextAppearance.Sunflower.Toolbar.Text" parent="TextAppearance.MaterialComponents.Headline5" >
         <item name="android:textColor">?attr/colorOnSurface</item>
@@ -71,6 +51,13 @@
         <item name="android:ellipsize">end</item>
         <item name="android:textSize">16sp</item>
         <item name="android:textColor">#272727</item>
+    </style>
+    <style name="navigation" parent="Theme.AppCompat.Light">
+        <item name="colorPrimary">#2B2B2B</item>
+    </style>
+    <style name="circle">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">50%</item>
     </style>
 
 </resources>
