--- a/app/src/main/res/layout/list_item_add_song.xml
+++ b/app/src/main/res/layout/list_item_add_song.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
         <variable
@@ -17,6 +16,7 @@
         android:layout_height="wrap_content"
         android:onClick="@{onClick}"
         android:layout_margin="4dp"
+        android:elevation="4dp"
         android:background="@drawable/radius_10_hollow"
         android:foreground="?android:attr/selectableItemBackgroundBorderless"
         android:descendantFocusability="blocksDescendants">
@@ -37,6 +37,8 @@
             android:layout_height="wrap_content"
             android:text="@{bean.songName}"
             android:textSize="18sp"
+            android:singleLine="true"
+            android:ellipsize="end"
             app:layout_constraintBottom_toBottomOf="@+id/checkBox"
             app:layout_constraintStart_toEndOf="@+id/checkBox"
             app:layout_constraintTop_toTopOf="@+id/checkBox"
@@ -48,6 +50,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:text="@{bean.author}"
+            android:singleLine="true"
+            android:ellipsize="end"
             app:layout_constraintEnd_toEndOf="@+id/textView12"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/textView12"
